Launching works